--- a/README.html
+++ b/README.html
@@ -395,9 +395,9 @@ with a strong interest in analytics.</li>
 </ul>
 <p>Links to deploy our app: <span style="color:red">(links to be
 added)</span></p>
-<p>Jagdeep - <a href="https://BC%20Surgical%20Wait%20Times%20Dashboard.herokuapp.com/">BC
+<p>Jagdeep - <a href="https://surgicaltestapp.herokuapp.com/">BC
 Surgical Wait Times Dashboard</a></p>
-<p>Saisree - <a href="https://BC%20Surgical%20Wait%20Times%20Dashboard.herokuapp.com/">BC
+<p>Saisree - <a href="https://bcsurgicaltimer.herokuapp.com/">BC
 Surgical Wait Times Dashboard</a></p>
 <p>Song - <a href="https://BC%20Surgical%20Wait%20Times%20Dashboard.herokuapp.com/">BC
 Surgical Wait Times Dashboard</a></p>
@@ -488,7 +488,6 @@ health authority. The fastest/slowest treated procedures chart has the
 option to select between fastest and slowest radio buttons. The total
 waiting and completed cases of a hospital has a dropdown menu of
 different hospitals based on the selected health authority.</p>
-<p><span style="color:red">(dashboard GIF can be added here)</span></p>
 </div>
 <div id="how-can-you-get-involved" class="section level3">
 <h3>How can you get involved?</h3>
